# A-Game

./: CMakeLists.txt  README.md  accounts.html  cart.html  checkout.html  contact.html  currencies.html  faq.html  games.html  index.html  login.html  requirements.txt  toolchain.cmake
components/: footer.html  navbar.html  product-card.html
css/: style.css
data/: products.json
include/CoreService/: ProfileManager.h
include/CoreService/Mapping/: InputEvent.h
include/CoreService/nlohmann/: json.hpp
js/: cart.js  checkout.js  main.js
profiles/: WarzoneDefaultMapping.json
rewasd_clone/: CMakeLists.txt
rewasd_clone/include/CoreService/: MappingEngine.h  ProfileManager.h
rewasd_clone/include/CoreService/Mapping/: MappingRule.h  OutputAction.h
rewasd_clone/include/CoreService/ViGEm/: vigem_client.h
rewasd_clone/src/CoreService/: DeviceEnumerator.h  Main.cpp  MappingEngine.cpp  ProfileManager.cpp  RawInputHandler.h  VirtualController.cpp  VirtualController.h
rewasd_clone/src/CoreService/Profiles/: WarzoneDefaultMapping.json
rewasd_mapper/: main.py  requirements.txt
rewasd_mapper/app/: main_window.py  mapping_window.py
rewasd_mapper/app/logic/: profile_manager.py
rewasd_mapper/profiles/: AutomatedTestProfile.json
src/: gui.py  input_handler.py  main.py  mapping_engine.py  profile_manager.py  ui.py  virtual_controller.py
src/CoreService/: DeviceEnumerator.cpp  DeviceEnumerator.h  Main.cpp  ProfileManager.cpp  RawInputHandler.cpp
